# MyBS

./: Dockerfile  Makefile  README.md  TODO  docker-compose.yaml  manage.py  pyproject.toml
apps/: models.py  serializers.py  urls.py  views.py
apps/management/commands/: seed_data.py
apps/migrations/: 0001_initial.py  0002_book_post_remove_course_instructor_and_more.py  0003_register_delete_book.py  0004_bus_dailytriplog_driver_maintenanceschedule_and_more.py  0005_alter_technicalstatus_category_and_more.py  0006_alter_bus_route.py  0007_alter_bus_route.py  0008_driver_phone_alter_driver_name_and_more.py  0009_alter_driver_shift_end_alter_driver_shift_start.py  0010_alter_salary_unique_together.py
front/: Dockerfile  MyBS.html  login.html  logout.html  script.js  style.css
frontend/: Dockerfile  Makefile  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/auth/: AuthScreen.tsx
frontend/src/components/dashboard/: Buses.tsx  DailySchedule.tsx  Drivers.tsx  Fines.tsx  Header.tsx  Nav.tsx  Salaries.tsx  Technical.tsx  WorkingHours.tsx
frontend/src/components/ui/: Card.tsx  Modal.tsx
frontend/src/context/: AppContext.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
root/: asgi.py  settings.py  urls.py  wsgi.py
